# agentic-identity-anchor

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml  security.yml  terraform-plan.yml
anchor-client/: Cargo.toml  build.rs
anchor-client/src/: config.rs  lib.rs  main.rs
anchor-client/src/agent/: inventory.rs  manager.rs  mod.rs
anchor-client/src/crypto/: mod.rs  verify.rs
anchor-client/src/health/: mod.rs  reporter.rs
anchor-client/src/service/: daemon.rs  mod.rs
anchor-client/src/transport/: cert.rs  client.rs  mod.rs
anchor-client/src/updater/: mod.rs  self_update.rs
anchor-client/tests/: agent_test.rs  config_test.rs  crypto_test.rs
backend/: .eslintrc.json  jest.config.ts  package-lock.json  package.json  tsconfig.json
backend/src/: types.ts
backend/src/auth/: verifier.ts
backend/src/db/: client.ts
backend/src/handlers/: agents.ts  deployments.ts  groups.ts  health-processor.ts  heartbeat.ts  policy.ts  register.ts  tenants.ts
backend/tests/: policy.test.ts  register.test.ts
cli/: Cargo.toml
cli/src/: client.rs  config.rs  main.rs  output.rs
cli/src/commands/: agents.rs  deployments.rs  devices.rs  groups.rs  mod.rs  tenants.rs
docs/: api.md  architecture.md  data-model.md  flows.md  security.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  aws-exports.ts  index.css
frontend/src/api/: agents.ts  client.test.ts  client.ts  deployments.ts  devices.ts  groups.ts  tenants.ts
frontend/src/components/: ConfirmModal.tsx  DataTable.tsx  ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx  Sidebar.tsx  StatusBadge.tsx
frontend/src/hooks/: useAgents.ts  useDeployments.ts  (+3 more)
infra/: backend.tf.example  main.tf  outputs.tf  variables.tf  versions.tf
(+21 files in other folders)
