[package]
name = "anchor-client"
version = "0.1.0"
edition = "2021"
description = "Anchor cross-platform daemon – root-of-trust runtime agent"
license = "MIT"

[lib]
name = "anchor_client_lib"
path = "src/lib.rs"

[[bin]]
name = "anchor-client"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
ring = "0.17"
rand = "0.8"
anyhow = "1"
thiserror = "1"
semver = "1"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rustls-pemfile = "2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
