[package]
name = "anchor-ctl"
version = "0.1.0"
edition = "2021"
description = "Anchor control plane CLI"

[[bin]]
name = "anchor-ctl"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
colored = "2"
tabled = "0.15"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
